[package]
name = "quickhull"
version = "0.1.0"
authors = ["Trevor"]

[dependencies]
time = "0.1"
rand = "0.3"
csv = "0.14.4"
#piston = "0.15.1"
#piston2d-graphics = "0.11.0"
#piston2d-opengl_graphics = "0.19.0"
#pistoncore-glutin_window = "0.17.1"

[dependencies.funlist]
#git = "https://github.com/cuplv/funlist.rs"
path = "src/funlist.rs/"
